# FlappyGL

./: .gitignore  CMakeLists.txt  README.md  build_wasm.sh
shaders/: default.fs  text.fs
shaders/gl/: default.vs
shaders/gles/: default.fs  default.vs  text.fs
src/: config.hpp  game.cpp  game.hpp  graphics_api.hpp  main.cpp  shell.html  sprite_atlas.hpp
src/engine/: audio.cpp  audio.hpp  core.cpp  core.hpp  core_data.hpp  keys.h  melon_types.hpp  platform_api.hpp
src/engine/platform/: platform_desktop_glfw.cpp  platform_web_wasm.cpp  wasm_stdc.c
src/game/: flappy_drawing.cpp  flappy_drawing.hpp  game.cpp  game.hpp  sprite_atlas.hpp
src/gl/: graphics_gl.cpp  quad_renderer.cpp  quad_renderer.hpp
src/graphics/: draw_commands.hpp  renderer.cpp  renderer.hpp  sprite_renderer.cpp  sprite_renderer.hpp  text_renderer.cpp  text_renderer.hpp
tools/shader_packer/: shader_packer.c  shader_packer.py
wasm/: app.js  index.html
